Disable djangologdb. It seems to cause Out of memory issues

--- a/wouso/settings.py.example
+++ b/wouso/settings.py.example
@@ -6,11 +6,11 @@ DEBUG = True
 
 # Setup logging
 import logging
-from djangologdb.handlers import DjangoDatabaseHandler, add_handler
+#from djangologdb.handlers import DjangoDatabaseHandler, add_handler
 logging.basicConfig(level=logging.DEBUG if DEBUG else logging.INFO)
 # This will get the default (root) logger; any further getLogger calls will inherit root
-logger = logging.getLogger()
-add_handler(logger, DjangoDatabaseHandler())
+#logger = logging.getLogger()
+#add_handler(logger, DjangoDatabaseHandler())
 
 # Configuration
 import os.path
@@ -153,7 +153,7 @@ INSTALLED_APPS = (
 
     # Uncomment the next line to enable admin documentation:
     # 'django.contrib.admindocs',
-    'djangologdb',
+    #'djangologdb',
     'django_nose',
 )
 
