--- a/wouso/settings.py.example
+++ b/wouso/settings.py.example
@@ -192,6 +192,7 @@ SOCIAL_AUTH_CLEF_SECRET = 'afd676fe8fb07a00513b02941b4cee5d'
 
 AUTH_PROFILE_MODULE = 'user.Player'
 
+DEFAULT_ACHIEVEMENT_ICONS_DIR = MEDIA_ROOT + "/img/default-ach-icons/"
 MEDIA_ARTIFACTS_DIR = os.path.dirname(__file__) + "/resources/static/upload/"
 MEDIA_ARTIFACTS_URL = "/static/upload/"
 
