--- a/wouso/settings.py.example
+++ b/wouso/settings.py.example
@@ -196,6 +196,9 @@ AUTH_PROFILE_MODULE = 'user.Player'
 MEDIA_ARTIFACTS_DIR = os.path.dirname(__file__) + "/resources/static/upload/"
 MEDIA_ARTIFACTS_URL = "/static/upload/"
 
+MEDIA_RACE_LOGO_DIR = os.path.dirname(__file__) + "/resources/static/upload/"
+MEDIA_RACE_LOGO_URL = "/static/upload/"
+
 WOUSO_VERSION = '5.0.1'
 
 LEVEL_LIMITS = None # Override this with an iterable
